--- a/public/css/main.css
+++ b/public/css/main.css
@@ -334,6 +334,7 @@ button {
 
 .film-card__title {
   margin-right: 0.5em;
+  cursor: pointer;
 }
 
 .film-card__rating,
@@ -363,6 +364,7 @@ button {
   transition: bottom 0.2s ease-out;
   width: 100%;
   z-index: 1;
+  cursor: pointer;
 }
 
 .film-card--no-controls .film-card__poster {
